force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <label>Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>