force-app/main/default/objects/Activity__c/fields/Additon__c.field-meta.xml
<CustomField>
    <fullName>Additon__c</fullName>
    <formula>No_of_Enrolments__c  -  Number_of_students_Participated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>