force-app/main/default/objects/Activity__c/fields/Max_number_of_Enrolments_allowed__c.field-meta.xml
<CustomField>
    <fullName>Max_number_of_Enrolments_allowed__c</fullName>
    <label>Max number of Enrolments allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>