force-app/main/default/objects/Activity__c/fields/No_of_Enrolments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Enrolments__c</fullName>
    <label>No of Enrolments</label>
    <summaryForeignKey>Student_Enrolment__c.Activity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>