force-app/main/default/objects/Activity__c/fields/Number_of_Enrolments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Enrolments__c</fullName>
    <label>Number of Enrolments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>