force-app/main/default/objects/Activity__c/fields/Number_of_students_Participated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_students_Participated__c</fullName>
    <label>Number of students Participated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>